{
  "version": 4,
  "terraform_version": "1.2.7",
  "serial": 12,
  "lineage": "77efc6c2-c44c-b5a0-fed9-28ff950027ce",
  "resources": [
    {
      "module": "module.nw",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:272459341377:internet-gateway/igw-046fa418073f5b68a",
            "id": "igw-046fa418073f5b68a",
            "owner_id": "272459341377",
            "tags": {
              "Name": "default_vpc_pub_igw",
              "env": "default"
            },
            "tags_all": {
              "Name": "default_vpc_pub_igw",
              "env": "default"
            },
            "vpc_id": "vpc-0b05080a1b2129767"
          },
          "dependencies": [
            "module.nw.aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nw",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:272459341377:route-table/rtb-0728eb85ed5c05eaa",
            "id": "rtb-0728eb85ed5c05eaa",
            "owner_id": "272459341377",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-046fa418073f5b68a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "default_vpc_pub_rt",
              "env": "default"
            },
            "tags_all": {
              "Name": "default_vpc_pub_rt",
              "env": "default"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b05080a1b2129767"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nw.aws_internet_gateway.igw",
            "module.nw.aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nw",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpc_asoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-067f5fca7cc010d13",
            "route_table_id": "rtb-0728eb85ed5c05eaa",
            "subnet_id": "subnet-0a2cdce6cff7ff4fa"
          },
          "dependencies": [
            "module.nw.aws_internet_gateway.igw",
            "module.nw.aws_route_table.pub_rt",
            "module.nw.aws_subnet.pub-snet",
            "module.nw.aws_vpc.test_vpc",
            "module.nw.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-076b17777ff67a69c",
            "route_table_id": "rtb-0728eb85ed5c05eaa",
            "subnet_id": "subnet-0852ec5fd0812c1a8"
          },
          "dependencies": [
            "module.nw.aws_internet_gateway.igw",
            "module.nw.aws_route_table.pub_rt",
            "module.nw.aws_subnet.pub-snet",
            "module.nw.aws_vpc.test_vpc",
            "module.nw.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.nw",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pri-snet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:272459341377:subnet/subnet-0b3ee2325197cc7cb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.4.0/22",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b3ee2325197cc7cb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "272459341377",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "default_pri_snet1_ap-south-1a",
              "env": "default"
            },
            "tags_all": {
              "Name": "default_pri_snet1_ap-south-1a",
              "env": "default"
            },
            "vpc_id": "vpc-0b05080a1b2129767"
          },
          "dependencies": [
            "module.nw.aws_vpc.test_vpc",
            "module.nw.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:272459341377:subnet/subnet-02ca6978504456186",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.12.0/22",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02ca6978504456186",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "272459341377",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "default_pri_snet2_ap-south-1b",
              "env": "default"
            },
            "tags_all": {
              "Name": "default_pri_snet2_ap-south-1b",
              "env": "default"
            },
            "vpc_id": "vpc-0b05080a1b2129767"
          },
          "dependencies": [
            "module.nw.aws_vpc.test_vpc",
            "module.nw.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.nw",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub-snet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:272459341377:subnet/subnet-0a2cdce6cff7ff4fa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/22",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a2cdce6cff7ff4fa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "272459341377",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "default_pub_snet1_ap-south-1a",
              "env": "default"
            },
            "tags_all": {
              "Name": "default_pub_snet1_ap-south-1a",
              "env": "default"
            },
            "vpc_id": "vpc-0b05080a1b2129767"
          },
          "dependencies": [
            "module.nw.aws_vpc.test_vpc",
            "module.nw.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:272459341377:subnet/subnet-0852ec5fd0812c1a8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.8.0/22",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0852ec5fd0812c1a8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "272459341377",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "default_pub_snet2_ap-south-1b",
              "env": "default"
            },
            "tags_all": {
              "Name": "default_pub_snet2_ap-south-1b",
              "env": "default"
            },
            "vpc_id": "vpc-0b05080a1b2129767"
          },
          "dependencies": [
            "module.nw.aws_vpc.test_vpc",
            "module.nw.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.nw",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "test_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:272459341377:vpc/vpc-0b05080a1b2129767",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/20",
            "default_network_acl_id": "acl-05a8323c2deaca2c1",
            "default_route_table_id": "rtb-09621100eff6b3fd4",
            "default_security_group_id": "sg-07eaadbd6b2f87c63",
            "dhcp_options_id": "dopt-e9fb4582",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0b05080a1b2129767",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09621100eff6b3fd4",
            "owner_id": "272459341377",
            "tags": {
              "Name": "default_vpc",
              "env": "default"
            },
            "tags_all": {
              "Name": "default_vpc",
              "env": "default"
            }
          }
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "app-sg",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:272459341377:security-group/sg-0cd7f3c3eb6fb2c37",
            "description": "app-sg",
            "egress": [],
            "id": "sg-0cd7f3c3eb6fb2c37",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "app-sg",
            "name_prefix": "",
            "owner_id": "272459341377",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b05080a1b2129767"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nw.aws_vpc.test_vpc"
          ]
        },
        {
          "index_key": "web-sg",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:272459341377:security-group/sg-05b7af5619d8c892a",
            "description": "test",
            "egress": [],
            "id": "sg-05b7af5619d8c892a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "test",
            "name_prefix": "",
            "owner_id": "272459341377",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b05080a1b2129767"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nw.aws_vpc.test_vpc"
          ]
        }
      ]
    }
  ]
}